<resources>
    <string name="app_name">KAIN!</string>
    <string name="google_map_api_key">AIzaSyBB8i_vhAu5iFIH_FDDs77lokDHiQEJZRY</string>
    <string name="title_activity_home">"hello"</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Map</string>
    <string name="nav_promos">Promos</string>
    <string name="nav_account">Account</string>
    <string name="search_hint">Search</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_manage">Manage</string>

    <string-array name="promo_type">
        <item>Everyday</item>
        <item>Every weekday</item>
        <item>Every weekend</item>
    </string-array>

    <string-array name="promo_time">
        <item>All day</item>
        <item>Certain Time</item>
    </string-array>

    <string-array name="operating_hours">
        <item>24 hours</item>
        <item>Certain Time</item>
    </string-array>
    <string name="title_activity_items">ItemsActivity</string>
</resources>
