<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/home_icon"
        android:title="@string/nav_home"
        android:visible="true" />
    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/search_icon"
        android:title="@string/nav_search"
        android:visible="true" />
    <item
        android:id="@+id/nav_promos"
        android:enabled="true"
        android:icon="@drawable/promo_icon"
        android:title="@string/nav_promos"
        android:visible="true" />
    <item
        android:id="@+id/nav_manage"
        android:icon="@drawable/manage_icon"
        android:title="@string/nav_manage" />
    <item
        android:id="@+id/nav_account"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/account_icon"
        android:title="@string/nav_account"
        android:visible="true" />
</menu>